Removed fieldset, not needed.

--- a/views/index.html
+++ b/views/index.html
@@ -51,7 +51,7 @@
                     Enter name:
                     <form action="/" method="post">
                         <input type="text" name="inputname" placeholder="Name" required>
-                        <input type="submit" value="Join Lobby">
+                        <input type="submit" value="Join">
                     </form>
                 </div>
             </div>
