Deck Builder layout about 40% done
Put a rudimentary tab system in place....I know how to make tabs in divs now.

--- a/views/decks.html
+++ b/views/decks.html
@@ -7,6 +7,27 @@
         <meta name="keywords" content="website keywords, website keywords" />
         <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
         <link rel="stylesheet" type="text/css" href="/views/style/style.css" />
+        <style>
+            #deck_builder{height:500px; margin-bottom: 10px;overflow:auto;outline:2px solid; outline-offset:-2px;}
+            #deck_builder > div{ outline:1px solid; outline-offset:-1px; float:left}          
+
+            #button_column{height:100%; width:105px ; float:top; position:relative;}
+            #button_column button{width:85px; height: 40px; margin: 10px 10px 0 10px; }
+            #button_column #save_and_play{width:85px; height: 65px; margin: 0px 10px 10px 10px; position:absolute; bottom:0;}
+
+            #deck{height:100%; width:320px; display:flex; flex-flow: column;}
+            #deck > div{width:310px; ;font-size: 1.2em; padding: 5px; outline:1px solid; outline-offset:-1px;}
+            #deck > #deck_cards{width:100%; flex-grow:1; padding:0}
+            #deck_tab{background-color: #f1f1f1;padding:5px 5px 0 5px;border-bottom:1px solid;}
+            #deck_tab button {background-color: #ccc; cursor: pointer; padding: 5px 5px; transition: 0.2s; border: 1px solid; border-bottom: 0px; border-radius: 5px 5px 0 0; margin:0;}
+            #deck_tab button:hover {background-color: #eee;}
+            #deck_tab button.active{background-color: #f5f4f0;border-bottom:1px solid  #f5f4f0; margin-bottom:-1px}
+            #hsp_deck{display:none;}
+
+            #card_search{height:100%; width:450px;  display:flex; flex-flow: column;}
+
+            #card_details{height:350px; border: 1px solid #808080; margin-bottom: 10px;}
+        </style>
     </head>
 
     <body>
@@ -31,11 +52,33 @@
             </div>
             <div id="content_header"></div>
             <div id="site_content">
-            
-                <div id="content">
-                    <!-- insert the page content here -->
-                    <h1>Deck Builder goes here.</h1>
-                
+                <!-- insert the page content here -->
+                <h1>Deck Builder</h1>
+                <div id="deck_builder">
+                    <div id="button_column">
+                        <button>New</button>
+                        <button>Save</button>
+                        <button>Save As</button>
+                        <button>Load</button>
+                        <button id="save_and_play">Save & Play</button>
+                    </div>
+                    <div id="deck"> 
+                        <div id="deck_name"><b>Name:</b> LolwalaDeck</div>
+                        <div id="deck_format"><b>Format:</b> LOL </div>
+                        <div id="deck_cards">
+                            <div id="deck_tab">
+                                <button class="tab_button active" onClick="openTab(event, 'main_deck')">Main deck</button>
+                                <button class="tab_button" onClick="openTab(event, 'hsp_deck')">Hyperspatial deck</button>
+                            </div>
+                            <div id="main_deck" class="deck_tabcontent">Main deck</div>
+                            <div id="hsp_deck" class="deck_tabcontent">HSP deck</div>
+                        </div>
+                    </div>
+
+                    <div id="card_search"></div>
+                </div>
+                <div id="card_details">
+
                 </div>
             </div>
             <div id="content_footer"></div>
@@ -45,4 +88,23 @@
             </div>
         </div>
     </body>
+    <script>
+        function openTab(event, tabName) {
+            var tabButtons = document.getElementsByClassName("tab_button");
+            tabButtons[0].className = tabButtons[0].className.replace(" active", "");
+            tabButtons[1].className = tabButtons[1].className.replace(" active", "");
+
+            event.currentTarget.className += " active";
+
+            if (tabName == 'main_deck') {
+                document.getElementById("main_deck").style.display = "block";
+                document.getElementById("hsp_deck").style.display = "none";
+
+            } else {
+                document.getElementById("main_deck").style.display = "none";
+                document.getElementById("hsp_deck").style.display = "block";
+            }
+
+        }
+    </script>
 </html>
