Added card list style
Also fixed slight up-down movement of cards when changing tabs

--- a/views/decks.html
+++ b/views/decks.html
@@ -16,12 +16,12 @@
             #button_column #save_and_play{width:85px; height: 65px; margin: 0px 10px 10px 10px; position:absolute; bottom:0;}
 
             #deck{height:100%; width:320px; display:flex; flex-flow: column;}
-            #deck > div{width:310px; ;font-size: 1.2em; padding: 5px; outline:1px solid; outline-offset:-1px;}
+            #deck > div{width:310px; font-size: 1.2em; padding: 5px; outline:1px solid; outline-offset:-1px;}
             #deck > #deck_cards{width:100%; flex-grow:1; padding:0}
             #deck_tab{background-color: #f1f1f1;padding:5px 5px 0 5px;border-bottom:1px solid;}
-            #deck_tab button {background-color: #ccc; cursor: pointer; padding: 5px 5px; transition: 0.2s; border: 1px solid; border-bottom: 0px; border-radius: 5px 5px 0 0; margin:0;}
-            #deck_tab button:hover {background-color: #eee;}
-            #deck_tab button.active{background-color: #f5f4f0;border-bottom:1px solid  #f5f4f0; margin-bottom:-1px}
+            #deck_tab button {background-color: #ccc; cursor: pointer; transition: 0.2s; padding: 5px 5px;  border: 1px solid; border-bottom: 0px; border-radius: 5px 5px 0 0; margin:0;}
+            #deck_tab button:hover {background-color: #eee; transition: 0.2s}
+            #deck_tab button.active{background-color: #f5f4f0;border-bottom:1px solid  #f5f4f0; margin-bottom:-1px; transition: 0.0s}
             #hsp_deck{display:none; resize:both}
 
             #card_search{height:100%; width:450px;  display:flex; flex-flow: column;}
@@ -31,6 +31,10 @@
             #button_column2{width:105px; height:100%; position:absolute}
             #search_results{width:345px; height:100%;position:absolute; right:0;}
             #card_details{height:350px; border: 1px solid #808080; margin-bottom: 10px;}
+
+            .card_list{margin:0; font-size: 14px }
+            .card_list > li{list-style-type: none; border-bottom:1px solid;margin:0;}
+            .card_list > .list_active{background:#cdf; width: calc( 100% - 2px );} /*100% width means bg covers the top div outline*/
         </style>
     </head>
 
@@ -74,8 +78,23 @@
                                 <button class="tab_button active" onClick="openTab(event, 'main_deck')">Main deck</button>
                                 <button class="tab_button" onClick="openTab(event, 'hsp_deck')">Hyperspatial deck</button>
                             </div>
-                            <div id="main_deck" class="deck_tabcontent">Main deck</div>
-                            <div id="hsp_deck" class="deck_tabcontent">HSP deck</div>
+                            <div id="main_deck" class="deck_tabcontent">
+                                <ul class="card_list">
+                                    <li>Main deck card1</li>
+                                    <li class="list_active">selected card</li>
+                                    <li>card</li>
+                                    <li>card</li>
+                                    <li>card</li>
+                                    <li>card</li>
+                                </ul>
+                            </div>
+                            <div id="hsp_deck" class="deck_tabcontent">
+                                <ul class="card_list">
+                                    <li>HSP deck card1</li>
+                                    <li class="list_active">selected card</li>
+                                    <li>card</li>                                 
+                                </ul>
+                            </div>
                         </div>
                     </div>
 
@@ -86,7 +105,16 @@
                                 <button>Add</button>
                                 <button>Remove</button>                                
                             </div>
-                            <div id="search_results"></div>
+                            <div id="search_results">
+                                <ul class="card_list">
+                                    <li>Search results card1</li>
+                                    <li class="list_active">selected card</li>
+                                    <li>card</li>
+                                    <li>card</li>
+                                    <li>card</li>
+                                    <li>card</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
