--- a/views/decks.html
+++ b/views/decks.html
@@ -133,8 +133,8 @@
                                 <input type="checkbox" name="civ_nature" value="Nature">Nature &nbsp
                                 <input type="checkbox" name="civ_water" value="Water">Water &nbsp
                                 <b>Rules Text: </b>
-                                <div id="lastParams" style="margin-top:-7px; position: relative; outline: 0;">
-                                    <textarea name="rules" rows="2" cols="47" style="resize:none; height:35px"></textarea>
+                                <div id="lastParams" style="margin-top:-3px; position: relative; outline: 0;">
+                                    <textarea name="rules" rows="2" cols="47" style="resize:none;"></textarea>
                                  <!--   <input type="reset" style="position: absolute; top:0; right:0; width:60px">  -->
                                     <input type="submit" name="lol" value="Search" formAction="#" style="position: absolute; right:0; bottom:10px; width:60px" />
                                 </div>
